--- a/css/HTML_DZ_Module_10_Week_8_(2)_library.css
+++ b/css/HTML_DZ_Module_10_Week_8_(2)_library.css
@@ -19,7 +19,10 @@
 	padding:.5vmin 1vmin;
 	color:red;
 }
-#ncorr::placeholder{color:red;}
+#ncorr::placeholder{
+	color:red;
+	background: url(pic\invalid.png);
+}
 
 
 
