--- a/css/HTML_DZ_Module_10_Week_8_(3)_sm.css
+++ b/css/HTML_DZ_Module_10_Week_8_(3)_sm.css
@@ -110,3 +110,8 @@ h1{
 #check1, #check2{
 	margin-right: .5vmin;
 }
+
+#corr::placeholder{
+	background: url(../pic/valid.png) no-repeat center right;
+	background-size:4%;
+}
